--- a/client/sass/modules/_tasks.scss
+++ b/client/sass/modules/_tasks.scss
@@ -1,3 +1,6 @@
+#taskList {
+	z-index: 10;
+}
 .task {
 	input {
 		margin-right: 10px;
